feat: added GET /persons